agregado formalizar adopción

--- a/app/src/main/res/layout/activity_perfil_persona.xml
+++ b/app/src/main/res/layout/activity_perfil_persona.xml
@@ -54,6 +54,13 @@
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_chat_con_persona"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/iniciar_chat"
+                android:layout_marginTop="30dp"/>
+
         </LinearLayout>
     </ScrollView>
 
