--- a/app/src/main/res/layout/activity_menu_keeper.xml
+++ b/app/src/main/res/layout/activity_menu_keeper.xml
@@ -186,7 +186,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/botonEventos"
+                    android:text="@string/registrar_evento"
                     android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
