agregado registrar evento

--- a/app/src/main/res/layout/activity_menu_keeper.xml
+++ b/app/src/main/res/layout/activity_menu_keeper.xml
@@ -162,7 +162,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutEventos"
+                android:id="@+id/cl_registrar_evento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
