--- a/app/src/main/res/layout/activity_menu_adoptante.xml
+++ b/app/src/main/res/layout/activity_menu_adoptante.xml
@@ -196,7 +196,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutVerEventos"
+                android:id="@+id/cl_ver_eventos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
